 - Renabled the content negotiation by default for Directory instances. This prevented the correct serving of index files in tutorial. Reported by Dave Pawson.
 - Fixed ServerServlet which forgot to set the proper Servlet Context on the Application. Reported by Evan DiBiase.

[API changes]
 - Moved org.restlet.data.Result to org.restlet.resource.Result (deprecation used).

[Enhancements] 
 - HTTP calls now try to use the channel aspect of a representation before its stream aspect. Suggested by Lars Heuer.
 - Added source path to JSON external plugin. Suggested by Chris Grindstaff.
 
1.0 beta 20 (2006-11-08)
[Bugs fixed]
 - Fixed bug causing the ServerServlet to create an extra HTTP server connector if one is available on the classpath. Reported by Sean Landis.
 - Fixed bug in StatusFilter, method dohandle() renamed to doHandle().
 - Removed getStatusCode() and getReasonPhrase() methods in ServletCall hiding the actual value set. Reported by Sean Landis.
 - Fixed bug preventing the restart of a Jetty 6 connector. Added RestartTestCase. Reported by Piyush Purang.
 - Fixed bug in AWS authentication algorithm if no AMZ_* header present. Reported by Mikkel Jensen.
 - Patched Simple connector to not return a "Content-length" header when size is 0.
 - Bug bug in the Simple connector causing a "Transfer-Encoding: chunked" header to be returned even if no entity was present. May be the cause of problems with the Safari browser.
 - Fixed issue with StringRepresentation wrongly computing its length in certain cases. Reported by Richard G.
 - Fixed potential NPE in StringRepresentation and StringTemplateRepresentation when no character set was defined. Reported by Chris Grindstaff.

[API breaking changes]
 - Moved Atom, FreeMarker and FileUpload extensions to org.restlet.ext.atom/freemarker/fileupload packages.
 - Moved implementation-independent classes from NRE into org.restlet packages. 