@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Fri Nov 10 13:51:23 CET 2006
-build.number=474
+#Sun Nov 12 15:19:19 CET 2006
+build.number=475
